https://famaf.algoritmos1.com

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,10 +3,9 @@
 >
   <hr class="opacity-0" />
   <a 
-    href="https://gonza.gr" 
+    href="https://gonzalogramagia.com" 
     target="_blank"
     rel="noopener noreferrer"
-    onclick="gtag('event', 'click', { 'event_category': 'footer_link', 'event_label': 'tree_moovimiento', 'link_url': 'https://www.moovimiento.com/' });"
     class="block py-4 no-underline text-black dark:text-white hover:scale-105 transition-all duration-200 ease-in-out"
   >
     💻 🧉 Desarrollado por Gonza
